--- a/404.html
+++ b/404.html
@@ -190,15 +190,7 @@ a:hover {
   
     <section id="thestuff">
       <h2 id="main-title">404! THIS PAGE IS UNDER CONSTRUCTION!</h2>
-      <smaller>or you just have a bad url... lol</smaller>
-      
-      <p><em>"interesting new people"</em> is a band created by genius inventors charlotte dollar and <a href="#scout">scout serket</a> and innovated by holly holiday and claire freelesbiangames. together they create a brand new genre of music called introspective phonk but it also doesn't have a name. don't ask for more information on the genre, lest you invoke the rage of the phonk killer.
-      </p>
-      <p>in april of 2025, in one evening, charlotte and <a href="#scout">scout</a> created interesting new people's debut album, <em>phonk tuah</em>. later in the same month, with holly, they created <em>scary phonk</em>. now with claire, the band is currently working on several brand new albums but are very very busy with their various jobs as multi-million dollar ceo's, mafia bosses and unemployed chuds.
-      </p>
-<p>on this site, you can find links to the band's twitter and their bandcamp, as well as merch which includes cds, vinyl records and awesome t-shirts! you can also click on any band members name in the above paragraph to read more about them.
-  <div id="scout" class="intro"><p><br>------------------------<br><br>scout "unabomber" (no relation) holiday-serket is an 18 year old transgender lesbian who uses it/its pronouns. scout likes disco elysium, cannibalism, torturing itself by making this website, disco elysium, dogs, dog<em>girls</em>, australian law, watching good movies and listening to good music, and disco elysium. it also has a personal site! go to wolfgirl.gay for more of scout!</p></div>
-      </p
+      <small>or you just have a bad url... lol</small>
   </section>
 </body>
   
