--- a/404.html
+++ b/404.html
@@ -71,8 +71,8 @@ nav a {
   flex: 1;
   background-color: rgb(255, 255, 255, 0.25);
   color: white;
-  background-image: url("https://cdn.discordapp.com/attachments/1225322467829088257/1450743311659696158/anisnow.gif?ex=6943a57f&is=694253ff&hm=5fda41a7a98ab1df7b821ce9cd96df17501fbdf4509d89b51502774031a7df90&");
-  padding: 10px 0;
+  background-image: url("pictures/anisnow.gif");
+padding: 10px 0;
 }
 
 #thestuff h2 {
@@ -91,7 +91,7 @@ nav a {
   margin-left: 20px;
   font-size: 25px;
   background-color: rgba(255, 255, 255, 0.25);
-  background-image: url("https://cdn.discordapp.com/attachments/1225322467829088257/1450743311659696158/anisnow.gif?ex=6943a57f&is=694253ff&hm=5fda41a7a98ab1df7b821ce9cd96df17501fbdf4509d89b51502774031a7df90&");
+  background-image: url("pictures/anisnow.gif");
   color: black;
 }
 
@@ -167,26 +167,26 @@ a:hover {
 <div class="marquee">
   <div class="marquee--inner">
     <span>
-      <div><img src="https://cdn.discordapp.com/attachments/1225322467829088257/1450721384291635371/Untitled123_20251214205548.png?ex=69439113&is=69423f93&hm=3de4408d3ee63165234579e717666bf7725db4d9d9b5b8be1bf46836a84f7378&" width="200" height="150">
-<img src="https://cdn.discordapp.com/attachments/1225322467829088257/1450721384291635371/Untitled123_20251214205548.png?ex=69439113&is=69423f93&hm=3de4408d3ee63165234579e717666bf7725db4d9d9b5b8be1bf46836a84f7378&" width="200" height="150">
-      <img src="https://cdn.discordapp.com/attachments/1225322467829088257/1450721384291635371/Untitled123_20251214205548.png?ex=69439113&is=69423f93&hm=3de4408d3ee63165234579e717666bf7725db4d9d9b5b8be1bf46836a84f7378&" width="200" height="150">
-        <img src="https://cdn.discordapp.com/attachments/1225322467829088257/1450721384291635371/Untitled123_20251214205548.png?ex=69439113&is=69423f93&hm=3de4408d3ee63165234579e717666bf7725db4d9d9b5b8be1bf46836a84f7378&" width="200" height="150">
-        <img src="https://cdn.discordapp.com/attachments/1225322467829088257/1450721384291635371/Untitled123_20251214205548.png?ex=69439113&is=69423f93&hm=3de4408d3ee63165234579e717666bf7725db4d9d9b5b8be1bf46836a84f7378&" width="200" height="150">
+      <div> <img src="/pictures/people.png" width="200" height="150">
+            <img src="/pictures/people.png" width="200" height="150">
+            <img src="/pictures/people.png" width="200" height="150">
+            <img src="/pictures/people.png" width="200" height="150">
+            <img src="/pictures/people.png" width="200" height="150">
       </div>
     </span>
     <span>
-      <div><img src="https://cdn.discordapp.com/attachments/1225322467829088257/1450721384291635371/Untitled123_20251214205548.png?ex=69439113&is=69423f93&hm=3de4408d3ee63165234579e717666bf7725db4d9d9b5b8be1bf46836a84f7378&" width="200" height="150">
-        <img src="https://cdn.discordapp.com/attachments/1225322467829088257/1450721384291635371/Untitled123_20251214205548.png?ex=69439113&is=69423f93&hm=3de4408d3ee63165234579e717666bf7725db4d9d9b5b8be1bf46836a84f7378&" width="200" height="150">
-        <img src="https://cdn.discordapp.com/attachments/1225322467829088257/1450721384291635371/Untitled123_20251214205548.png?ex=69439113&is=69423f93&hm=3de4408d3ee63165234579e717666bf7725db4d9d9b5b8be1bf46836a84f7378&" width="200" height="150">
-        <img src="https://cdn.discordapp.com/attachments/1225322467829088257/1450721384291635371/Untitled123_20251214205548.png?ex=69439113&is=69423f93&hm=3de4408d3ee63165234579e717666bf7725db4d9d9b5b8be1bf46836a84f7378&" width="200" height="150">
-                <img src="https://cdn.discordapp.com/attachments/1225322467829088257/1450721384291635371/Untitled123_20251214205548.png?ex=69439113&is=69423f93&hm=3de4408d3ee63165234579e717666bf7725db4d9d9b5b8be1bf46836a84f7378&" width="200" height="150">
-
+      <div> <img src="/pictures/people.png" width="200" height="150">
+            <img src="/pictures/people.png" width="200" height="150">
+            <img src="/pictures/people.png" width="200" height="150">
+            <img src="/pictures/people.png" width="200" height="150">
+            <img src="/pictures/people.png" width="200" height="150">
       </div>
     </span>
   </div>
 </div>
     </section>
   </section>
+
   
     <section id="thestuff">
       <h2 id="main-title">404! THIS PAGE IS UNDER CONSTRUCTION!</h2>
