--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@ nav a {
   flex: 1;
   background-color: rgb(255, 255, 255, 0.25);
   color: white;
-  background-image: url("https://cdn.discordapp.com/attachments/1225322467829088257/1450743311659696158/anisnow.gif?ex=6943a57f&is=694253ff&hm=5fda41a7a98ab1df7b821ce9cd96df17501fbdf4509d89b51502774031a7df90&");
-  padding: 10px 0;
+  background-image: url("pictures/anisnow.gif");
+    padding: 10px 0;
 }
 
 #thestuff h2 {
@@ -91,8 +91,8 @@ nav a {
   margin-left: 20px;
   font-size: 25px;
   background-color: rgba(255, 255, 255, 0.25);
-  background-image: url("https://cdn.discordapp.com/attachments/1225322467829088257/1450743311659696158/anisnow.gif?ex=6943a57f&is=694253ff&hm=5fda41a7a98ab1df7b821ce9cd96df17501fbdf4509d89b51502774031a7df90&");
-  color: black;
+  background-image: url("pictures/anisnow.gif");
+color: black;
 }
 
 #main-title:hover {
