--- a/merch.html
+++ b/merch.html
@@ -247,7 +247,7 @@ a:hover {
         <a href="https://interestingnewpeople.bandcamp.com/merch"><img src="pictures/vinyl.png" />
 </div></a>
     <div>
-        <a href="https://interestingnewpeople.bandcamp.com/merch"><img src="pictures/cd.png" />
+        <a href="https://interestingnewpeople.bandcamp.com/merch"><img src="pictures/cd.jpg" />
 </div></a>
       </div>
   </body>
